feat: made some changes
